@@ -1,3 +1,8 @@
+2013-04-27  Julien Danjou  <julien@danjou.info>
+
+	* sieve-manage.el (sieve-manage-authenticator-alist): Update the sieve
+	port to "sieve" now that it has an official IANA port assigned.
+
 2013-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mail-source.el (mail-source-fetch-pop, mail-source-check-pop):
